added a launch option for logger

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,5 +20,15 @@
       "program": "${workspaceFolder:ActionBuilderCore}/.build/debug/ActionBuilderTool",
       "preLaunchTask": "swift: Build Debug ActionBuilderTool"
     },
+    {
+      "type": "swift",
+      "request": "launch",
+      "args": [
+        "${workspaceFolder}/../Logger"
+      ],
+      "name": "Debug with Logger",
+      "program": "${workspaceFolder:ActionBuilderCore}/.build/debug/ActionBuilderTool",
+      "preLaunchTask": "swift: Build Debug ActionBuilderTool"
+    },
   ]
 }
